--- a/homepage/templates/home/kapcsolat.html
+++ b/homepage/templates/home/kapcsolat.html
@@ -34,3 +34,58 @@
     </form>
   </body>
 </html>
+
+              ==========================
+                Services Section
+              ============================
+              <section id="services2">
+                <div class="container">
+                  <div class="section-header">
+                    <h2>Hogyan dolgozunk</h2>
+                    <p></p>
+                  </div>
+
+                  <div class="row">
+
+                    <div class="col-lg-6">
+                      <div class="">
+                        <h4 class="title"><a href=""></a></h4>
+                        <p class="description"></p>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                      <div class="box wow">
+                        <h4 class="title">1 Beszélgetünk</h4>
+                        <p class="description">Megismerjük céljaid és meghatározzuk merre szeretne céged tartani</p>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                      <div class="box wow">
+                        <h4 class="title">2 Adatokat elmezünk</h4>
+                        <p class="description">Piacodat felmérjük adatok segítségével megismerjük vásárlóidat.</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="box wow">
+                        <h4 class="title">3 Kidolgozzuk a tervet</h4>
+                        <p class="description">Az adatok és céljaid figyelmbevételével megalkotjuk a győztes tervet.</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="box wow">
+                        <h4 class="title">4 Megvalósítjuk</h4>
+                        <p class="description">Végigvisszük a tervet szorosan együttmüködve a cégeddel.</p>
+                      </div>
+                    </div>
+                    <div class="col-lg-6">
+                      <div class="box wow">
+                        <h4 class="title">5 Elemzünk</h4>
+                        <p class="description">Az eredményeket feldolgozzuk, új lehetőségeket keresünk és segítünk a következő szintre lépni.</p>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </section><!-- #services -->
