--- a/homepage/static/css/home.css
+++ b/homepage/static/css/home.css
@@ -5,27 +5,22 @@
 
 
 body {
-  background: #fff;
-  color: #444;
-  font-family: "Open Sans", sans-serif;
+    margin: 0px;
+    padding: 0px;
+    /*background-color: #f2f2f2;*/
+    /*color: #595959;*/
+    font-family: 'Moholy Sans Light', 'Arial';
+    font-size: 15px;
+    color: #333;
+    line-height: 160%;
+    -webkit-font-smoothing: antialiased;
+    line-height: 30px;
+
 }
 
-a {
-  color: #8ac5c3;
-  transition: 0.5s;
-}
-
-a:hover,
-a:active,
-a:focus {
-  color: #8ac5c3;
-  outline: none;
-  text-decoration: none;
-}
-
-p {
-  padding: 0;
-  margin: 0 0 30px 0;
+#siteWrapper{
+  margin: 80px;
+  background-color: #f3f3f3;
 }
 
 h1,
@@ -40,53 +35,22 @@ h6 {
   padding: 0;
 }
 
-
-/*--------------------------------------------------------------
-# Top Bar
---------------------------------------------------------------*/
-
-#topbar {
-  background: #fff;
-  padding: 10px 0;
-  border-bottom: 1px solid #eee;
-  font-size: 14px;
+.section_head{
+  padding: 50px;
+  position: relative;
+  height: 100%;
+  background: url("/static/images/gg.jpg") 100% 0  fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
 }
 
-#topbar .contact-info a {
-  line-height: 1;
-  color: #555;
-}
+.section_head h1{
+  padding-top: 220px;
+  font-size: 98px;
 
-#topbar .contact-info a:hover {
-  color: #8ac5c3;
 }
-
-#topbar .contact-info i {
-  color: #8ac5c3;
-  padding: 4px;
-}
-
-#topbar .contact-info .fa-phone {
-  padding-left: 20px;
-  margin-left: 20px;
-  border-left: 1px solid #e9e9e9;
-}
-
-#topbar .social-links a {
-  color: #555;
-  padding: 4px 12px;
-  display: inline-block;
-  line-height: 1px;
-  border-left: 1px solid #e9e9e9;
-}
-
-#topbar .social-links a:hover {
-  color: #8ac5c3;
-}
-
-#topbar .social-links a:first-child {
-  border-left: 0;
-}
+/
 
 /*--------------------------------------------------------------
 # Header
@@ -106,7 +70,6 @@ h6 {
   margin: 0;
   padding: 0;
   line-height: 1;
-  font-family: "Montserrat", sans-serif;
   font-weight: 700;
 }
 
@@ -125,123 +88,14 @@ h6 {
   margin: 0;
 }
 
-/*--------------------------------------------------------------
-# Intro Section
---------------------------------------------------------------*/
-
-#intro {
-  width: 100%;
-  height: 60vh;
-  position: relative;
-  background-size: cover;
-  background: url("/static/images/cyb.jpg") 50% 0  fixed;
-
-}
-
-#intro .intro-content {
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  text-align: center;
-}
-
-#intro .intro-content h2 {
-  color: #ff9a00;
-  margin-bottom: 30px;
-  font-size: 42px;
-  font-weight: 700;
-}
-
-#intro .intro-content h2 span {
-  color: #8ac5c3;
-  text-decoration: underline;
-}
-
-#intro .intro-content .btn-get-started,
-#intro .intro-content .btn-projects {
-  font-family: "Raleway", sans-serif;
-  font-size: 15px;
-  font-weight: bold;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 10px 32px;
-  border-radius: 2px;
-  transition: 0.5s;
-  margin: 10px;
-  color: #fff;
-}
-
-#intro .intro-content .btn-get-started {
-  background: #f7d900a;
-  border: 2px solid #f7d900a;
-}
-
-#intro .intro-content .btn-get-started:hover {
-  background: none;
-  color: #f7d900a;
-}
-
-#intro .intro-content .btn-projects {
-  background: #8ac5c3;
-  border: 2px solid #8ac5c3;
-}
-
-#intro .intro-content .btn-projects:hover {
-  background: none;
-  color: #8ac5c3;
-}
-
-#intro #intro-carousel {
-  z-index: 8;
-}
-
-#intro #intro-carousel::before {
-  content: '';
-  background-color: rgba(255, 255, 255, 0.7);
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 7;
-}
-
-#intro #intro-carousel .item {
-  width: 100%;
-  height: 60vh;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  transition-property: opacity;
-}
 
 /* Sections Header
 --------------------------------*/
 
 .section-header {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  margin-top: 80px;
+
 }
 
 .section-header h2 {
@@ -259,7 +113,7 @@ h6 {
   display: block;
   width: 50px;
   height: 3px;
-  background: #8ac5c3;
+  background: #fff;
   bottom: 0;
   left: 0;
 }
@@ -273,7 +127,14 @@ h6 {
 --------------------------------*/
 
 #about {
-  padding: 60px 0 30px 0;
+  padding: 20px 0 20px 0;
+  padding: 20px;
+  margin-bottom: 10px;
+  box-shadow: 0 0 51px rgba(168, 179, 154, 0.74);
+  /*background: linear-gradient(-234deg, #ea9d64 0%, #fa8936 100%);*/
+  padding-bottom: 40px;
+  border-radius: 0px;
+  transition: 0.4s;
 }
 
 #about .about-img {
@@ -289,15 +150,14 @@ h6 {
   color: #f7d900a;
   font-weight: 700;
   font-size: 36px;
-  font-family: "Raleway", sans-serif;
 }
 
 #about .content h3 {
   color: #555;
   font-weight: 300;
   font-size: 18px;
-  line-height: 26px;
-  font-style: italic;
+  line-height: 30px;
+
 }
 
 #about .content p {
@@ -345,24 +205,26 @@ h6 {
 --------------------------------*/
 
 #services {
-  padding: 30px 0 0 0;
-  background: url("/static/images/geo.jpg") 50% 0  fixed;
-
+  padding: 50px 2 50px 0;
+  height: 500px;
+  /*background: url("/static/images/closer.jpg") 50% 0 fixed;*/
 }
 
 #services .box {
-  padding: 40px;
+  padding: 20px;
   margin-bottom: 40px;
-  box-shadow: 10px 10px 15px rgba(73, 78, 92, 0.1);
-  background: #fff;
-  transition: 0.4s;
+  /*box-shadow: 0 0 51px rgba(168, 179, 154, 0.74);*/
+  padding-bottom: 40px;
+  border-radius: 40px;
+  transition: 0.3s;
+
 }
 
 #services .box:hover {
-  box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
-  transform: translateY(-10px);
-  -webkit-transform: translateY(-10px);
-  -moz-transform: translateY(-10px);
+  box-shadow: 2px 10px 30px rgba(73, 78, 92, 0.15);
+  transform: translateY(-1px);
+  -webkit-transform: translateY(-1px);
+  -moz-transform: translateY(-2px);
 }
 
 #services .box .icon {
@@ -377,16 +239,10 @@ h6 {
   margin-top: 34px;
 }
 
-#services .box .icon i:before {
-  background: #f7d900a;
-  background: linear-gradient(45deg, #8ac5c3 0%, #a3ebd5 100%);
-  background-clip: border-box;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+
 
 #services .box h4 {
-  margin-left: 100px;
+  margin-left: 10px;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 22px;
@@ -398,9 +254,8 @@ h6 {
 
 #services .box p {
   font-size: 14px;
-  margin-left: 100px;
-  margin-bottom: 0;
-  line-height: 24px;
+  margin-left: 10px;
+  margin-bottom: 10px;
 }
 
 
@@ -738,42 +593,4 @@ h6 {
 }
 
 
-
-/* SCROLLING ICON Section
---------------------------------*/
-
-.scroll-downs {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-
-  width :34px;
-  height: 55px;
-}
-.mousey {
-  width: 3px;
-  padding: 10px 15px;
-  height: 35px;
-  border: 2px solid #000;
-  border-radius: 25px;
-  opacity: 0.75;
-  box-sizing: content-box;
-}
-.scroller {
-  width: 3px;
-  height: 10px;
-  border-radius: 25%;
-  background-color: #000;
-  animation-name: scroll;
-  animation-duration: 2.2s;
-  animation-timing-function: cubic-bezier(.15,.41,.69,.94);
-  animation-iteration-count: infinite;
-}
-@keyframes scroll {
-  0% { opacity: 0; }
-  10% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(15px); opacity: 0;}
-}
+/*flex*/
